--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "gypfile": true,
   "scripts": {
     "build": "node-gyp rebuild && tsc",
-    "clean": "node-gyp clean && rimraf build dist"
+    "test": "npm run build && node dist/index.test.js",
+    "clean": "node-gyp clean && rimraf build dist",
+    "prepack": "npm run clean && npm run build"
   },
   "author": "Connor Peet <connor@peet.io>",
   "license": "MIT",
@@ -16,7 +18,11 @@
   "devDependencies": {
     "@types/node": "^17.0.18",
     "node-gyp": "^8.4.1",
+    "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.5.5"
+  },
+  "prettier": {
+    "printWidth": 100
   }
 }
