--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Run Tests
+name: CI
 on: push
 jobs:
   test:
@@ -13,7 +13,7 @@ jobs:
 
   publish:
     runs-on: windows-latest
-    needs: build
+    needs: test
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
       - uses: actions/checkout@v2
