--- a/ci.yml
+++ b/ci.yml
@@ -10,7 +10,7 @@ resources:
     - repository: templates
       type: github
       name: microsoft/vscode-engineering
-      ref: main
+      ref: connor4312/sep-install-rust
       endpoint: Monaco
 
 parameters:
@@ -29,10 +29,13 @@ extends:
           - script: npm ci
             displayName: Install dependencies
 
+          - script: npm run build
+            displayName: Build
+
         testPlatforms:
           - name: Windows
             nodeVersions:
-              - 18.x
+              - 20.x
 
         testSteps:
           - script: npm ci
@@ -41,5 +44,8 @@ extends:
           - script: npm test
             displayName: Test
 
+        rustTargets: aarch64-pc-windows-msvc x86_64-pc-windows-msvc
+        apiScanSoftwareName: "vscode-win32-app-container-tokens"
+        apiScanSoftwareVersion: "0.1"
         publishPackage: ${{ parameters.publishPackage }}
         packagePlatform: Windows
