chore: tweak APIScan parameters

--- a/ci.yml
+++ b/ci.yml
@@ -45,7 +45,8 @@ extends:
             displayName: Test
 
         rustTargets: aarch64-pc-windows-msvc x86_64-pc-windows-msvc
+        apiScanExcludes: "package/win32-app-container-tokens.win32-arm64-msvc.node"
         apiScanSoftwareName: "vscode-win32-app-container-tokens"
-        apiScanSoftwareVersion: "0.1"
+        apiScanSoftwareVersion: "0.2"
         publishPackage: ${{ parameters.publishPackage }}
         packagePlatform: Windows
